--- a/css/styles.css
+++ b/css/styles.css
@@ -171,6 +171,7 @@ header {
 .media img,
 .media iframe {
   width: 100%;
+  aspect-ratio: 4 / 3;
   height: auto;
   border-radius: 6px;
   border: 1px solid #888;
